updated final report

--- a/src/main/resources/static/finalreport.html
+++ b/src/main/resources/static/finalreport.html
@@ -97,7 +97,7 @@
     <tr>
         <th scope="row">G<sub>7</sub></th>
         <td>Something extra</td>
-        <td>Noemi</td>
+        <td>See Below</td>
     </tr>
     <tr>
         <th scope="row">C<sub>0</sub></th>
@@ -117,7 +117,7 @@
     <tr>
         <th scope="row">C<sub>3</sub></th>
         <td>Something extra</td>
-        <td>Simon</td>
+        <td>See Below</td>
     </tr>
     <tr>
         <th scope="row">O<sub>0</sub></th>
@@ -152,7 +152,7 @@
     <tr>
         <th scope="row">O<sub>6</sub></th>
         <td>Something extra</td>
-        <td>Jerry</td>
+        <td>See Below</td>
     </tr>
     <tr>
         <th scope="row">D<sub>0</sub></th>
@@ -167,7 +167,7 @@
     <tr>
         <th scope="row">D<sub>2</sub></th>
         <td>Video Demo</td>
-        <td>Jerry</td>
+        <td>Noemi</td>
     </tr>
     <tr>
         <th scope="row">D<sub>3</sub></th>
@@ -177,7 +177,7 @@
     <tr>
         <th scope="row">D<sub>4</sub></th>
         <td>Final report</td>
-        <td>Simon</td>
+        <td>Jerry</td>
     </tr>
     </tbody>
 </table>
@@ -210,6 +210,10 @@
         <td>Customers are redirected back to the page they were on after login.</td>
         <td>Noemi, Jerry</td>
     </tr>
+    <tr>
+        <td>Random Dataset generator.</td>
+        <td>Simon</td>
+    </tr>
     </tbody>
 </table>
 <div style="padding: 30px;">
@@ -231,7 +235,19 @@
 
 <div class="jumbotron text-center">
     <h1>Reflections</h1>
-    <p>we learned about connecting </p>
+    <h2>What we learned?</h2>
+    <ul style="list-style-type: none;">
+        <li><p>Connecting databases</p></li>
+        <li><p>How to use SQL queries inside of java</p></li>
+        <li><p>Working with spring boot</p></li>
+        <li><p>Generate datasets</p></li>
+        <li><p>How to work with Thymeleaf</p></li>
+        <li><p>Team work</p></li>
+    </ul>
+    <h2>What we would have changed?</h2>
+    <ul style="list-style-type: none;">
+        <li><p>We would have liked to implement more views for both customers and admins.</p></li>
+    </ul>
 </div>
 </body>
 </html>
