--- a/src/main/resources/static/finalreport.html
+++ b/src/main/resources/static/finalreport.html
@@ -223,9 +223,10 @@
 <div class="jumbotron text-center">
     <h1>Instructions for starting the application.</h1>
     <p>MySQL must be running on your machine.</p>
-    <p>Click the link below to download the anansi_db SQL dump and run it in MySQL Workbench or through a SQL shell.</p>
+    <p>Click the link below to download the anansi_db SQL dump and run it in MySQL Workbench or through a SQL shell.<br>
+    The SQL script will create and set the anansi_db as the active database and fill in some starter data.</p>
     <div style="padding: 30px;">
-        <a style="width: 100%;" href="#" download="anansi_sql" class="btn btn-info" role="button">Download SQL</a>
+        <a style="width: 100%;" href="create_anansi_db.sql" download="create_anansi_db.sql" class="btn btn-info" role="button">Download SQL</a>
     </div>
     <p>Once the database is active you can start the application via IDE or maven shell commands.<br>
     Then open a browser and go to <a href="http://localhost:8080">http://localhost:8080</a><br>
